# ProyectoMotor

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/pi_controller/: Simulink2ESP32_types.h
drivers/HAL/: CMakeLists.txt  Simulink2ESP32.c  Simulink2ESP32.h  Simulink2ESP32_private.h  rtwtypes.h  tcp_client.c  tcp_client.h  telemetry.c  telemetry.h  wifi_sta.c  wifi_sta.h
drivers/HAL/protocol_examples_common_LOCAL/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  socket_task.c  socket_task.h
